[gd_scene load_steps=9 format=3 uid="uid://d0ut30pdp01gb"]

[ext_resource type="Script" uid="uid://yn03p70h6a4w" path="res://scripts/menu/options.gd" id="1_kixs7"]
[ext_resource type="Texture2D" uid="uid://vlsfi0moxghb" path="res://assets/world_assets/ezgif-8fc02c9f193ee8.png" id="2_5ak6t"]
[ext_resource type="Script" uid="uid://dxcsvrar5tq3p" path="res://scripts/menu/button.gd" id="3_ubx11"]

[sub_resource type="Animation" id="Animation_3rkf3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nl8w3"]
resource_name = "loop"
length = 3.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_247la"]
_data = {
&"RESET": SubResource("Animation_3rkf3"),
&"loop": SubResource("Animation_nl8w3")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhv7b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knos3"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kixs7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(3.84, 3.6)
texture = ExtResource("2_5ak6t")
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_247la")
}
autoplay = "loop"
speed_scale = 1.5

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 27.0
offset_right = 240.0
offset_bottom = 141.0
theme_override_colors/font_focus_color = Color(0.9490196, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.9490196, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
theme_override_styles/focus = SubResource("StyleBoxEmpty_mhv7b")
text = "Back"
flat = true

[node name="SaveChanges" type="Button" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 750.0
offset_right = 1237.0
offset_bottom = 864.0
theme_override_colors/font_focus_color = Color(0.9490196, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
theme_override_styles/focus = SubResource("StyleBoxEmpty_knos3")
text = "Save changes"
flat = true
script = ExtResource("3_ubx11")

[node name="BGM" type="HSlider" parent="."]
layout_mode = 0
offset_left = 983.0
offset_top = 605.0
offset_right = 1579.0
offset_bottom = 665.0
max_value = 1.0
step = 0.1

[node name="SFX" type="HSlider" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 439.0
offset_right = 1577.0
offset_bottom = 521.0
max_value = 1.0
step = 0.1

[node name="LabelBGM" type="Label" parent="."]
layout_mode = 0
offset_left = 536.0
offset_top = 579.0
offset_right = 755.0
offset_bottom = 685.0
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
text = "BGM: "

[node name="LabelSFX" type="Label" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 423.0
offset_right = 737.0
offset_bottom = 529.0
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 77
text = "SFX:"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SaveChanges" to="." method="_on_save_changes_pressed"]
[connection signal="value_changed" from="BGM" to="." method="_on_bgm_value_changed"]
[connection signal="value_changed" from="SFX" to="." method="_on_sfx_value_changed"]
